attempt 7 on timeout error

--- a/nyro-chatbot/package.json
+++ b/nyro-chatbot/package.json
@@ -8,7 +8,7 @@
     "update": "git pull origin main && npm run db-migrate && npm run db-types",
     "clean": "npm run lint:fix && npm run format:write",
     "dev": "next dev",
-    "build": "CI=false && next build && rm -rf ./.next/cache",
+    "build": "CI=false && next build && cp -r .next/static .next/standalone/.next/ && cp -r public .next/standalone/",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
@@ -81,6 +81,7 @@
     "next-i18n-router": "^5.2.0",
     "next-pwa": "5.6.0",
     "next-themes": "^0.2.1",
+    "nyro": "file:",
     "openai": "^4.23.0",
     "pdf-parse": "^1.1.1",
     "react": "^18",
