--- a/nyro-electron/package.json
+++ b/nyro-electron/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "electron-clipboard-extended": "^1.1.1",
+    "electron-log": "^5.2.0",
     "electron-updater": "^6.2.1",
     "node-powershell": "^5.0.1",
     "nyro": "file:",
