--- a/nyro-electron/package.json
+++ b/nyro-electron/package.json
@@ -1,11 +1,11 @@
 {
   "name": "nyro",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "nyro electron app",
   "main": "main.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development electron .",
-    "dist": "electron-builder"
+    "dist": "electron-builder --win -p always"
   },
   "build": {
     "appId": "com.nyrollc.nyro",
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "electron-clipboard-extended": "^1.1.1",
+    "electron-log": "^5.2.0",
     "node-powershell": "^5.0.1",
     "nyro": "file:",
     "robotjs": "^0.6.0",
